--- a/SocialMediaApp/mainwindow.ui
+++ b/SocialMediaApp/mainwindow.ui
@@ -74,7 +74,7 @@
      </widget>
     </widget>
     <widget class="QWidget" name="signInPage">
-     <widget class="QLabel" name="signInEMailLabel">
+     <widget class="QLabel" name="signInEmailLabel">
       <property name="geometry">
        <rect>
         <x>327</x>
@@ -141,12 +141,12 @@
      </widget>
     </widget>
     <widget class="QWidget" name="signUpPage">
-     <widget class="QLabel" name="signUpEMailLabel">
+     <widget class="QLabel" name="signUpEmailLabel">
       <property name="geometry">
        <rect>
-        <x>190</x>
-        <y>220</y>
-        <width>58</width>
+        <x>326</x>
+        <y>215</y>
+        <width>41</width>
         <height>16</height>
        </rect>
       </property>
@@ -157,8 +157,8 @@
      <widget class="QLabel" name="signUpUserNameLabel">
       <property name="geometry">
        <rect>
-        <x>210</x>
-        <y>260</y>
+        <x>298</x>
+        <y>245</y>
         <width>71</width>
         <height>16</height>
        </rect>
@@ -170,8 +170,8 @@
      <widget class="QLabel" name="signUpPasswordLabel">
       <property name="geometry">
        <rect>
-        <x>230</x>
-        <y>310</y>
+        <x>307</x>
+        <y>275</y>
         <width>61</width>
         <height>16</height>
        </rect>
@@ -183,7 +183,7 @@
      <widget class="QLineEdit" name="signUpEmailField">
       <property name="geometry">
        <rect>
-        <x>320</x>
+        <x>380</x>
         <y>210</y>
         <width>113</width>
         <height>24</height>
@@ -193,8 +193,8 @@
      <widget class="QLineEdit" name="signUpUserNameField">
       <property name="geometry">
        <rect>
-        <x>360</x>
-        <y>250</y>
+        <x>380</x>
+        <y>240</y>
         <width>113</width>
         <height>24</height>
        </rect>
@@ -203,8 +203,8 @@
      <widget class="QLineEdit" name="signUpPasswordField">
       <property name="geometry">
        <rect>
-        <x>410</x>
-        <y>310</y>
+        <x>380</x>
+        <y>270</y>
         <width>113</width>
         <height>24</height>
        </rect>
@@ -213,8 +213,8 @@
      <widget class="QPushButton" name="registerButton">
       <property name="geometry">
        <rect>
-        <x>370</x>
-        <y>390</y>
+        <x>360</x>
+        <y>320</y>
         <width>80</width>
         <height>24</height>
        </rect>
