--- a/SocialMediaApp/mainwindow.ui
+++ b/SocialMediaApp/mainwindow.ui
@@ -24,7 +24,7 @@
      </rect>
     </property>
     <property name="currentIndex">
-     <number>2</number>
+     <number>3</number>
     </property>
     <widget class="QWidget" name="splashScreen">
      <widget class="QLabel" name="logoPlaceHolder">
@@ -110,7 +110,7 @@
        </rect>
       </property>
       <property name="text">
-       <string>What's your e-mail?</string>
+       <string/>
       </property>
      </widget>
      <widget class="QLineEdit" name="signInPasswordField">
@@ -123,7 +123,7 @@
        </rect>
       </property>
       <property name="text">
-       <string>Enter password</string>
+       <string/>
       </property>
      </widget>
      <widget class="QPushButton" name="logInButton">
@@ -139,13 +139,26 @@
        <string>Log In</string>
       </property>
      </widget>
+     <widget class="QPushButton" name="homeButton_2">
+      <property name="geometry">
+       <rect>
+        <x>360</x>
+        <y>350</y>
+        <width>80</width>
+        <height>24</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Home</string>
+      </property>
+     </widget>
     </widget>
     <widget class="QWidget" name="signUpPage">
      <widget class="QLabel" name="signUpEmailLabel">
       <property name="geometry">
        <rect>
         <x>326</x>
-        <y>215</y>
+        <y>185</y>
         <width>41</width>
         <height>16</height>
        </rect>
@@ -158,7 +171,7 @@
       <property name="geometry">
        <rect>
         <x>298</x>
-        <y>245</y>
+        <y>215</y>
         <width>71</width>
         <height>16</height>
        </rect>
@@ -184,7 +197,7 @@
       <property name="geometry">
        <rect>
         <x>380</x>
-        <y>210</y>
+        <y>180</y>
         <width>113</width>
         <height>24</height>
        </rect>
@@ -194,7 +207,7 @@
       <property name="geometry">
        <rect>
         <x>380</x>
-        <y>240</y>
+        <y>210</y>
         <width>113</width>
         <height>24</height>
        </rect>
@@ -223,18 +236,45 @@
        <string>Register</string>
       </property>
      </widget>
+     <widget class="QPushButton" name="homeButton">
+      <property name="geometry">
+       <rect>
+        <x>360</x>
+        <y>350</y>
+        <width>80</width>
+        <height>24</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Home</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="signUpNameLabel">
+      <property name="geometry">
+       <rect>
+        <x>330</x>
+        <y>245</y>
+        <width>41</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Name:</string>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="signUpNameField">
+      <property name="geometry">
+       <rect>
+        <x>380</x>
+        <y>240</y>
+        <width>113</width>
+        <height>24</height>
+       </rect>
+      </property>
+     </widget>
     </widget>
+    <widget class="QWidget" name="appScreen"/>
    </widget>
-  </widget>
-  <widget class="QMenuBar" name="menubar">
-   <property name="geometry">
-    <rect>
-     <x>0</x>
-     <y>0</y>
-     <width>800</width>
-     <height>21</height>
-    </rect>
-   </property>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
