--- a/SocialMediaApp/mainwindow.ui
+++ b/SocialMediaApp/mainwindow.ui
@@ -24,7 +24,7 @@
      </rect>
     </property>
     <property name="currentIndex">
-     <number>3</number>
+     <number>7</number>
     </property>
     <widget class="QWidget" name="splashScreen">
      <widget class="QLabel" name="logoPlaceHolder">
@@ -273,7 +273,420 @@
       </property>
      </widget>
     </widget>
-    <widget class="QWidget" name="appScreen"/>
+    <widget class="QWidget" name="mainMenu">
+     <widget class="QPushButton" name="friendsListButton">
+      <property name="geometry">
+       <rect>
+        <x>220</x>
+        <y>288</y>
+        <width>80</width>
+        <height>24</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Friends List</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="friendSearchButton">
+      <property name="geometry">
+       <rect>
+        <x>360</x>
+        <y>288</y>
+        <width>80</width>
+        <height>24</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Find a Friend</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="myProfileButton">
+      <property name="geometry">
+       <rect>
+        <x>500</x>
+        <y>288</y>
+        <width>80</width>
+        <height>24</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>My Profile</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="logOutButton">
+      <property name="geometry">
+       <rect>
+        <x>360</x>
+        <y>338</y>
+        <width>80</width>
+        <height>24</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Log Out</string>
+      </property>
+     </widget>
+    </widget>
+    <widget class="QWidget" name="profilePage">
+     <widget class="QLabel" name="locationLabel">
+      <property name="geometry">
+       <rect>
+        <x>50</x>
+        <y>180</y>
+        <width>58</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Location:</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="bioLabel">
+      <property name="geometry">
+       <rect>
+        <x>80</x>
+        <y>300</y>
+        <width>21</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Bio:</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="friendsLabel">
+      <property name="geometry">
+       <rect>
+        <x>55</x>
+        <y>220</y>
+        <width>51</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Friends:</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="nameLabel">
+      <property name="geometry">
+       <rect>
+        <x>65</x>
+        <y>140</y>
+        <width>41</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Name:</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="interestsLabel">
+      <property name="geometry">
+       <rect>
+        <x>44</x>
+        <y>260</y>
+        <width>58</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Interests:</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="profilePictureLabel">
+      <property name="geometry">
+       <rect>
+        <x>30</x>
+        <y>50</y>
+        <width>91</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Profile Picture:</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="userProfilePictureLabel">
+      <property name="geometry">
+       <rect>
+        <x>140</x>
+        <y>50</y>
+        <width>181</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Placeholder Profile Picture</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="userNameLabel">
+      <property name="geometry">
+       <rect>
+        <x>110</x>
+        <y>140</y>
+        <width>58</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>TextLabel</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="userLocationLabel">
+      <property name="geometry">
+       <rect>
+        <x>110</x>
+        <y>180</y>
+        <width>58</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>TextLabel</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="userFriendsLabel">
+      <property name="geometry">
+       <rect>
+        <x>110</x>
+        <y>220</y>
+        <width>300</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>TextLabel</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="userInterestsLabel">
+      <property name="geometry">
+       <rect>
+        <x>110</x>
+        <y>260</y>
+        <width>300</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>TextLabel</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="userBioLabel">
+      <property name="geometry">
+       <rect>
+        <x>110</x>
+        <y>300</y>
+        <width>300</width>
+        <height>200</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>TextLabel</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="editProfileButton">
+      <property name="geometry">
+       <rect>
+        <x>710</x>
+        <y>540</y>
+        <width>80</width>
+        <height>24</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Edit Profile</string>
+      </property>
+     </widget>
+    </widget>
+    <widget class="QWidget" name="editProfilePage">
+     <widget class="QLabel" name="userProfilePictureLabel_2">
+      <property name="geometry">
+       <rect>
+        <x>140</x>
+        <y>50</y>
+        <width>181</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Placeholder Profile Picture</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="profilePictureLabel_2">
+      <property name="geometry">
+       <rect>
+        <x>30</x>
+        <y>50</y>
+        <width>91</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Profile Picture:</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="bioLabel_2">
+      <property name="geometry">
+       <rect>
+        <x>80</x>
+        <y>300</y>
+        <width>21</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Bio:</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="nameLabel_2">
+      <property name="geometry">
+       <rect>
+        <x>65</x>
+        <y>140</y>
+        <width>41</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Name:</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="friendsLabel_2">
+      <property name="geometry">
+       <rect>
+        <x>55</x>
+        <y>220</y>
+        <width>51</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Friends:</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="locationLabel_2">
+      <property name="geometry">
+       <rect>
+        <x>50</x>
+        <y>180</y>
+        <width>58</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Location:</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="interestsLabel_2">
+      <property name="geometry">
+       <rect>
+        <x>44</x>
+        <y>260</y>
+        <width>58</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Interests:</string>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="userNameField">
+      <property name="geometry">
+       <rect>
+        <x>110</x>
+        <y>140</y>
+        <width>113</width>
+        <height>24</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="userInterestsField">
+      <property name="geometry">
+       <rect>
+        <x>110</x>
+        <y>260</y>
+        <width>113</width>
+        <height>24</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QTextEdit" name="userBioField">
+      <property name="geometry">
+       <rect>
+        <x>110</x>
+        <y>300</y>
+        <width>300</width>
+        <height>200</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="userLocationField">
+      <property name="geometry">
+       <rect>
+        <x>110</x>
+        <y>180</y>
+        <width>113</width>
+        <height>24</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="doneEditButton">
+      <property name="geometry">
+       <rect>
+        <x>710</x>
+        <y>540</y>
+        <width>80</width>
+        <height>24</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Finished</string>
+      </property>
+     </widget>
+    </widget>
+    <widget class="QWidget" name="friendSearchPage">
+     <widget class="QLabel" name="friendSearchLabel">
+      <property name="geometry">
+       <rect>
+        <x>275</x>
+        <y>210</y>
+        <width>251</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Please Enter the User Name of Your Friend</string>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="friendSearchField">
+      <property name="geometry">
+       <rect>
+        <x>343</x>
+        <y>240</y>
+        <width>113</width>
+        <height>24</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="searchButton">
+      <property name="geometry">
+       <rect>
+        <x>360</x>
+        <y>290</y>
+        <width>80</width>
+        <height>24</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Search</string>
+      </property>
+     </widget>
+    </widget>
+    <widget class="QWidget" name="friendResultPage"/>
+    <widget class="QWidget" name="friendsListPage"/>
    </widget>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
