--- a/SocialMediaApp/mainwindow.ui
+++ b/SocialMediaApp/mainwindow.ui
@@ -24,7 +24,7 @@
      </rect>
     </property>
     <property name="currentIndex">
-     <number>7</number>
+     <number>8</number>
     </property>
     <widget class="QWidget" name="splashScreen">
      <widget class="QLabel" name="logoPlaceHolder">
@@ -500,6 +500,19 @@
        <string>Edit Profile</string>
       </property>
      </widget>
+     <widget class="QPushButton" name="mainMenuButton">
+      <property name="geometry">
+       <rect>
+        <x>710</x>
+        <y>510</y>
+        <width>80</width>
+        <height>24</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Main Menu</string>
+      </property>
+     </widget>
     </widget>
     <widget class="QWidget" name="editProfilePage">
      <widget class="QLabel" name="userProfilePictureLabel_2">
@@ -684,8 +697,65 @@
        <string>Search</string>
       </property>
      </widget>
+     <widget class="QPushButton" name="mainMenuButton_2">
+      <property name="geometry">
+       <rect>
+        <x>360</x>
+        <y>330</y>
+        <width>80</width>
+        <height>24</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Main Menu</string>
+      </property>
+     </widget>
     </widget>
-    <widget class="QWidget" name="friendResultPage"/>
+    <widget class="QWidget" name="friendResultPage">
+     <widget class="QPushButton" name="mainMenuButton_3">
+      <property name="geometry">
+       <rect>
+        <x>710</x>
+        <y>510</y>
+        <width>80</width>
+        <height>24</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Main Menu</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="friendProfileLabel">
+      <property name="geometry">
+       <rect>
+        <x>130</x>
+        <y>230</y>
+        <width>191</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>TextLabel</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="friendProfileButton">
+      <property name="geometry">
+       <rect>
+        <x>390</x>
+        <y>230</y>
+        <width>80</width>
+        <height>24</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Go to Profile</string>
+      </property>
+     </widget>
+    </widget>
+    <widget class="QWidget" name="friendProfilePage"/>
     <widget class="QWidget" name="friendsListPage"/>
    </widget>
   </widget>
